--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,18 +1,21 @@
 ---
-import SingleLayout from '@/layouts/SingleLayout.astro'
-import { getCollection } from 'astro:content'
+export const prerender = true;
+
+import SingleLayout from "@/layouts/SingleLayout.astro";
+import { render } from "astro:content";
+import { getCollection } from "astro:content";
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection('blog')
+  const blogEntries = await getCollection("blog");
 
   return blogEntries.map((entry) => ({
-    params: { slug: entry.slug },
+    params: { slug: entry.id },
     props: { entry },
-  }))
+  }));
 }
 
-const { entry } = Astro.props
-const { Content } = await entry.render()
+const { entry } = Astro.props;
+const { Content } = await render(entry);
 ---
 
 <SingleLayout {...entry.data}>
