--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,20 +1,14 @@
 ---
 import { render } from 'astro:content'
-import { type CollectionEntry, getCollection } from 'astro:content'
 import { getEntry } from 'astro:content'
 import SingleLayout from '@/layouts/SingleLayout.astro'
-
-interface Props {
-  entry: CollectionEntry<'pages'>
-}
 
 const slug = Astro.params.slug
 if (!slug) {
   return Astro.redirect('/404')
 }
 
-const entry = await getEntry('pages', slug)
-
+const entry = await getEntry('blog', slug)
 if (!entry) {
   return Astro.redirect('/404')
 }
