--- a/src/pages/blog/tag/[tag].astro
+++ b/src/pages/blog/tag/[tag].astro
@@ -1,23 +1,17 @@
 ---
-export const prerender = true
-
 import { getCollection } from 'astro:content'
 import ArticleCard from '@/components/ui/ArticleCard.astro'
 import { RevealHeading } from '@/components/ui/RevealHeading'
 import SiteLayout from '@/layouts/SiteLayout.astro'
-import type { GetStaticPathsResult } from 'astro'
 
-export async function getStaticPaths(): Promise<GetStaticPathsResult> {
-  const posts = await getCollection('blog')
-
-  return posts.map((entry) => ({
-    params: { tag: entry.data.tag },
-  }))
+const tag = Astro.params.tag
+if (!tag) {
+  return Astro.redirect('/404')
 }
 
 const posts = await getCollection('blog').then((posts) =>
   posts
-    .filter((post) => post.data.tag === Astro.params.tag)
+    .filter((post) => post.data.tag === tag)
     .sort((a, b) => b.data.date.getTime() - a.data.date.getTime()),
 )
 ---
