chore(tailwind): upgrade tailwind

--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Head from '@/components/base/Head.astro'
 import '@/styles/fonts.css'
+import '@/styles/global.css'
 
 import { Footer } from '@/components/ui/Footer'
 import { Header } from '@/components/ui/Header'
