--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import { render } from 'astro:content'
-import { type CollectionEntry, getCollection } from 'astro:content'
+import { type CollectionEntry } from 'astro:content'
 import { getEntry } from 'astro:content'
 import SingleLayout from '@/layouts/SingleLayout.astro'
 
