--- a/src/components/base/Head.astro
+++ b/src/components/base/Head.astro
@@ -1,14 +1,14 @@
 ---
 interface Props {
-  title: string
-  description: string
-  children?: any
+  title: string;
+  description: string;
+  children?: any;
 }
 
-const { title, description } = Astro.props
+const { title, description } = Astro.props;
 
-const type = Astro.url.pathname.includes('/blog/') ? 'blog' : 'page'
-const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
+const type = Astro.url.pathname.includes("/blog/") ? "blog" : "page";
+const slug = Astro.url.pathname.replace(/\/$/, "").split("/").pop();
 ---
 
 <head>
@@ -114,7 +114,7 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
               "/static/array.js"),
             (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(
               p,
-              r,
+              r
             );
           var u = e;
           for (
@@ -131,7 +131,7 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
               },
               o =
                 "init capture register register_once register_for_session unregister unregister_for_session getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty createPersonProfile opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing debug".split(
-                  " ",
+                  " "
                 ),
               n = 0;
             n < o.length;
