--- a/src/pages/m/[slug].astro
+++ b/src/pages/m/[slug].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false
+
 import { render } from 'astro:content'
 import { getEntry } from 'astro:content'
 import SingleLayout from '@/layouts/SingleLayout.astro'
