--- a/apps/web/src/pages/login.astro
+++ b/apps/web/src/pages/login.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false
+
 import type { ActionInputError } from 'astro:actions'
 import { actions, isInputError } from 'astro:actions'
 import SiteLayout from '@/layouts/SiteLayout.astro'
