--- a/apps/web/src/components/base/Head.astro
+++ b/apps/web/src/components/base/Head.astro
@@ -1,4 +1,6 @@
 ---
+import { ClientRouter } from 'astro:transitions'
+
 interface Props {
   title: string
   description: string
@@ -25,6 +27,8 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
   <meta property="twitter:url" content={Astro.url} />
   <meta name="twitter:title" content={title} />
   <meta name="twitter:description" content={description} />
+
+  <ClientRouter />
 
   {
     Astro.url.pathname !== "/" ? (
@@ -101,12 +105,12 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
         (e.init = function (i, s, a) {
           function g(t, e) {
             var o = e.split(".");
-            2 == o.length && ((t = t[o[0]]), (e = o[1])),
+            (2 == o.length && ((t = t[o[0]]), (e = o[1])),
               (t[e] = function () {
                 t.push([e].concat(Array.prototype.slice.call(arguments, 0)));
-              });
+              }));
           }
-          ((p = t.createElement("script")).type = "text/javascript"),
+          (((p = t.createElement("script")).type = "text/javascript"),
             (p.crossOrigin = "anonymous"),
             (p.async = !0),
             (p.src =
@@ -115,7 +119,7 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
             (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(
               p,
               r
-            );
+            ));
           var u = e;
           for (
             void 0 !== a ? (u = e[a] = []) : (a = "posthog"),
@@ -123,7 +127,9 @@ const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
               u.toString = function (t) {
                 var e = "posthog";
                 return (
-                  "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e
+                  "posthog" !== a && (e += "." + a),
+                  t || (e += " (stub)"),
+                  e
                 );
               },
               u.people.toString = function () {
