--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -5,6 +5,7 @@ import ExternalLinkIcon from '@/components/icons/ExternalLinkIcon.astro'
 import { SelectedWorksHeading } from '@/components/pages/home/SelectedWorksHeading'
 import { Tagline } from '@/components/pages/home/Tagline'
 import ArticleCard from '@/components/ui/ArticleCard.astro'
+import RestrictedArticles from '@/components/ui/RestrictedArticles.astro'
 import { RevealHeading } from '@/components/ui/RevealHeading'
 import SiteLayout from '@/layouts/SiteLayout.astro'
 import { PROJECTS } from '@/libs/config'
@@ -155,6 +156,7 @@ const posts = await getCollection('blog').then((posts) =>
           />
         ))
       }
+      <RestrictedArticles server:defer />
     </div>
   </section>
 </SiteLayout>
