--- a/apps/web/src/components/ui/ArticleCard.astro
+++ b/apps/web/src/components/ui/ArticleCard.astro
@@ -1,30 +1,40 @@
 ---
+import LockIcon from '../icons/LockIcon.astro'
+
 interface Props {
   slug: string
   tag: string
   title: string
   date: Date
   description: string
+  type?: 'blog' | 'restricted'
 }
 
-const post = Astro.props
+const { type = 'blog', ...post } = Astro.props
 ---
 
 <a
-  href={`/blog/${post.slug}`}
+  href={type === "blog" ? `/blog/${post.slug}` : `/r/${post.slug}`}
   class="p-6 border border-stone-300 relative after:bg-white after:absolute after:inset-0 after:-translate-y-full after:duration-300 hover:after:translate-y-0 overflow-y-hidden group/article bg-stone-700"
 >
   <div class="space-y-2 relative z-10">
-    <p
-      class="text-white text-sm group-hover/article:text-stone-700 duration-300"
-    >
-      {post.tag} &mdash;{" "}
+    <div class="flex items-center justify-between">
+      <p
+        class="text-white text-sm group-hover/article:text-stone-700 duration-300"
+      >
+        {post.tag} &mdash;{" "}
+        {
+          Intl.DateTimeFormat("en-ID", {
+            dateStyle: "medium",
+          }).format(post.date)
+        }
+      </p>
       {
-        Intl.DateTimeFormat("en-ID", {
-          dateStyle: "medium",
-        }).format(post.date)
+        type === "restricted" && (
+          <LockIcon class:list="size-4 text-white group-hover/article:text-stone-700 duration-300" />
+        )
       }
-    </p>
+    </div>
     <h1
       class="text-white text-4xl font-heading uppercase my-2 group-hover/article:text-stone-700 duration-300"
     >
