--- a/apps/web/src/components/base/Head.astro
+++ b/apps/web/src/components/base/Head.astro
@@ -10,7 +10,12 @@ interface Props {
 
 const { title, description } = Astro.props
 
-const type = Astro.url.pathname.includes('/blog/') ? 'blog' : 'page'
+const type = (() => {
+  if (Astro.url.pathname.startsWith('/blog')) return 'blog'
+  if (Astro.url.pathname.startsWith('/snippets')) return 'snippets'
+  return 'page'
+})()
+
 const slug = Astro.url.pathname.replace(/\/$/, '').split('/').pop()
 ---
 
